--- a/Franquisia1.1/Views/Home/Documento.cshtml
+++ b/Franquisia1.1/Views/Home/Documento.cshtml
@@ -17,7 +17,24 @@
         margin-top: 10px;
         margin-bottom: 10px;
     }
-    #op tr td:nth-child(2){text-align:right;}
+    #op{
+        margin-bottom:0px;
+    }
+    #op tr td:nth-child(2) {
+        text-align: right;
+    }
+    #items thead tr th {
+        text-align: right;
+    }
+    #items tbody tr  {
+        text-align: right;
+    }
+    #items tr td:nth-child(1) {
+        text-align: left;
+    }
+    #items thead tr th:nth-child(1) {
+        text-align: left;
+    }
     .img-load {
         position: absolute;
         left:50%;
@@ -91,7 +108,7 @@
                 </table>
             </div>
             <div class="panel">
-                <table class="table table-hover table-striped table-condensed" >
+                <table id="items" class="table table-hover table-striped table-condensed" >
                     <thead>
                         <tr><th >Artículo</th><th style="width:10%;">Cantidad</th><th style="width:10%;">Precio</th><th style="width:10%;">Importe</th></tr>
                     </thead>
@@ -105,7 +122,7 @@
             </div>
             <div class="panel bordes">
                 <div class="panel-body">
-                    <div class="col-xs-6 col-sm-7 col-md-8">
+                    <div class="col-xs-6 col-sm-7 col-md-8 row pull-left">
                         SON: <label>@ViewBag.totalstr</label>
                         <div class="text-center">
                             <hr />
@@ -114,7 +131,7 @@
                         </div>
                         Autorizado mediante resolución de intendencia @ViewBag.cia.resintendencia
                     </div>
-                    <div class="col-xs-6 col-sm-5 col-md-4">
+                    <div class="col-xs-6 col-sm-5 col-md-4 row pull-right">
                         <table id="op" class="table table-condensed">
                             <tr><td>Op. Gavada @ViewBag.abrevia </td><td>@ViewBag.gravado.ToString("#,##0.00")</td></tr>
                             <tr><td>Op. Inafectas @ViewBag.abrevia </td><td>@ViewBag.inafecto.ToString("#,##0.00")</td></tr>
